--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "lodash": "^4.6.1",
     "react": "^0.14.7",
     "react-native": "^0.22.2",
-    "realm": "^0.11.0"
+    "realm": "^0.11.0",
+    "request": "^2.69.0"
   }
 }
